updated mobile layout to correct spacing between my projects and certificate, and centered profile pic

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -44,7 +44,6 @@
     height: 250px;
     border-radius: 20px;
     margin-right: 10px;
-
 }
 
 .a-title{
@@ -114,7 +113,7 @@
     }
 
     /* Certifcate image */
-    .a-cert  {
+    .a-cert-img  {
         width: 100%;
         height: 20vh;
         /* object-fit: cover; */
@@ -122,6 +121,13 @@
         align-items: center;
         align-content: center;
     }
+
+    /* .a-cert-img{
+        width: 400px;
+        height: 250px;
+        border-radius: 20px;
+        margin-right: 10px;
+    } */
 
     /* Certificate text */
     .a-cert-texts {
