--- a/src/components/introduction/intro.css
+++ b/src/components/introduction/intro.css
@@ -120,11 +120,17 @@
     } */
 
     .i-img {
-        width: 40%;
-        height: 40%;
-        margin-top: 5px;
-        align-items: center;
-        justify-content: center;
+        /* width: 40%; */
+        /* height: 40%; */
+        /* margin-top: 5px; */
+        /* align-items: center; */
+        /* justify-content: center; */
+        top: 25%;
+        transform: translateY(-92%);
+        -ms-transform: translateY(-92%);
+        -moz-transform: translateY(-92%);
+        -webkit-transform: translateY(-92%);
+        -o-transform: translateY(-92%);
     }
 
     /* .i-img {
